--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,7 @@
 	<div class="container-fluid">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
+				<%= form_for(@user, url: password_resets_path(params[:id])) do |f| %>
 					<%= render 'shared/errors', object: f.object %>
 
 					<%= hidden_field_tag :email, @user.email %>
