--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -4,7 +4,7 @@
 	<div class="container-fluid col-md-6 col-md-offset-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<%= form_for(:password_reset, url: password_reset_path) do |f| %>
+				<%= form_for(:password_reset, url: password_resets_path) do |f| %>
 					<%= f.label :email, class: "form-control" %>
 					<%= f.email_field :email, class: "form-control" %>
 
