--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,13 +1,14 @@
-<h2>Forgot Password</h2>
+
 
 <div class="row">
 	<div class="container-fluid col-md-6 col-md-offset-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<%= form_for(:password_reset, url: password_reset_path) do |f| %>
-					<%= f.label :email, class: "form-control" %>
+			<h3>Forgot Password</h3>
+				<%= form_for(:password_reset, url: password_resets_path) do |f| %>
+					<%= f.label :email %>
 					<%= f.email_field :email, class: "form-control" %>
-
+					<br />
 					<%= f.submit "Submit", class: "btn btn-default" %>
 				<% end %>
 			</div>
