--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -4,7 +4,7 @@
   To reset your password, click on the below link
 </p>
 
-<%= link_to "Reset Password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<%= link_to "Reset Password", edit_password_resets_path(@user.reset_token, email: @user.email) %>
 
 <p>This will expire in two hours</p>
 
