--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -2,7 +2,7 @@ Password Reset
 
 To reset your password, click on the below link
 
-<%= link_to "Reset Password", edit_password_resets_url(@user.reset_token, email: @user.email) %>
+<%= link_to "Reset Password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
 This will expire in two hours
 
