--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,10 +1,9 @@
-<h2>Enter New Password</h2>
-
 <div class="row">
 	<div class="container-fluid">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<%= form_for(@user, url: password_resets_path(params[:id])) do |f| %>
+			<h2>Enter New Password</h2>
+				<%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
 					<%= render 'shared/errors', object: f.object %>
 
 					<%= hidden_field_tag :email, @user.email %>
