basic search functionality added

--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,3 +1,5 @@
-<%= @user.each do |user| %>
-	<%= user.username %>
+<% if !params[:search].blank? %>
+	<% @user.each do |user| %>
+		<%= user.username %>
+	<% end %>
 <% end %>
