--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,14 +17,12 @@
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <div class="form-group">
-          <%= form_tag search_users_path, :method => 'get' do %>
-            <%= text_field_tag :search %>
-            <%= submit_tag "Find Users", :name => nil, class: "btn btn-default" %> 
+          <%= form_tag search_users_path, :method => 'get', class: "navbar-form navbar-right" do %>
+            <div class="form-group">
+              <%= text_field_tag :search, params[:search] %>
+              <%= submit_tag "Find Users", :name => nil, class: "btn btn-default" %> 
+            </div>
           <% end %>
-        </div>
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
         <% if logged_in? %>
@@ -49,8 +47,3 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-          <%= form_tag search_users_path, :method => 'get' do %>
-            <%= text_field_tag :search, params[:search] %>
-            <%= submit_tag "Find Users", :name => nil, class: "btn btn-default" %> 
-          <% end %>
