--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
         <% end %>
           <ul class="dropdown-menu">
             <% if logged_in? %>
-              <li><%= link_to "Profile", '/user/' + (current_user.username) %></li>
+              <li><%= link_to, user_path(current_user) %></li>
               <li><%= link_to "User Settings", edit_user_path(current_user) %></li>
               <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             <% else %>
