--- a/app/views/users/index.hrml.erb
+++ b/app/views/users/index.hrml.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="container-fluid">
-	<% @user.each do |user| %>
-		<%= user.username %>
-	<% end %>
+	<%# @user.each do |user| %>
+		<%# user.username %>
+	<%# end %>
 	</div>
 </div>
