--- a/app/views/users/index.hrml.erb
+++ b/app/views/users/index.hrml.erb
@@ -1,7 +1,12 @@
-<div class="row">
-	<div class="container-fluid">
-	<%# @user.each do |user| %>
-		<%# user.username %>
-	<%# end %>
+<% if logged_in? %>
+	<div class="row">
+		<aside class="container-fluid col-md-4">
+			<section class="user_info">
+				<%= render 'shared/user_info' %>
+			</section>
+			<section class="micropost_form">
+				<%= render 'shared/micropost_form' %>
+			</section>
+		</aside>
 	</div>
-</div>
+<% end %>
