--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,19 @@
 <% provide(:title, @user) %>
-
-<%= @user.username %>
+<div class="row">
+	<aside class="col-md-4">
+		<section class="user_info">
+			<h2>	
+				<%# gravatar_for @user %>
+				<%= @user %>
+			</h2>
+		</section>
+	</aside>
+	<div class="col-md-8">
+		<% if @user.microposts.any? %>
+			<h3><%= pularize(@user.microposts.count, "Post") %></h3>
+			<ol class="microposts">
+				<%= render @microposts %>
+			</ol>
+		<% end %>
+	</div>
+</div>
