--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@micropost) do |f| %>
-	<%= render 'shared/error', object: f.object %>
+	<%= render 'shared/errors', object: f.object %>
 	<div class="field">
 		<%= f.text_area :content, placeholder: "Post a comment", class: "form-control" %>
 	</div>
-	<%= f.submit("Post"), class: "btn btn-default" %>
+	<%= f.submit "Post", class: "btn btn-default" %>
 <% end %>
 
