--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,11 @@
-<%= link_to gravatar_for(current_user, size: 50), current_user %>
-<%= current_user.username %>
-<%= link_to "View My Profile", user_path(current_user) %>
-<%= current_user.microposts.count %>
+<div class="user_info">
+    <a href="<%= user_path(current_user) %>">
+    <%# gravatar_for current_user, :size => 30 %>
+    <span class="user_name">
+        <%= current_user.username %>
+    </span>
+    <span class="microposts">
+        <%= pluralize(current_user.microposts.count, "micropost") %>
+    </span>
+    </a>
+</div>
