--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,15 +4,15 @@
 		<section class="user_info">
 			<h2>	
 				<%# gravatar_for @user %>
-				<%= @user %>
+				<%= @user.username %>
 			</h2>
 		</section>
 	</aside>
 	<div class="col-md-8">
 		<% if @user.microposts.any? %>
-			<h3><%= pularize(@user.microposts.count, "Post") %></h3>
+			<h3><% pluralize(@user.microposts.count, "Post") %></h3>
 			<ol class="microposts">
-				<%= render @microposts %>
+				<%= render 'shared/micropost' %>
 			</ol>
 		<% end %>
 	</div>
