--- a/app/assets/stylesheets/microposts.scss
+++ b/app/assets/stylesheets/microposts.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Microposts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.microposts {
+	li {
+		list-style-type:none;
+		padding:1rem;
+	}
+}
+
+.post {
+	display:block;
+}
