--- a/app/views/shared/_micropost.html.erb
+++ b/app/views/shared/_micropost.html.erb
@@ -1,15 +1,17 @@
    <% if @user.microposts.any? %>
-        <h3>Microposts (<%= @user.microposts.count %>)</h3>
         <ol class="microposts">
           <% @user.microposts.each do |micropost| %>
-            <li>
+            <h4><%= micropost.user.username %></h4>
+            <li class="post">
               <span class="content"><%= micropost.content %></span>
-              <span class="timestamp">
-              Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-              </span>
+              <%= time_ago_in_words(micropost.created_at) %>
             </li>
             <% if current_user?(micropost.user) %>
-            	<%= link_to "Delete", micropost, method: :delete, data: {contfirm: "Are you sure?"} %>
+            <div class="bottom_links">
+            	<p><%= link_to micropost, method: :delete, data: {contfirm: "Are you sure?"} do %>
+            		<i class="glyphicon glyphicon-remove"></i>
+            	<% end %></p>
+            </div>
             <% end %>
           <% end %>
         </ol>
