--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,19 +1,6 @@
 <% provide(:title, "Home") %>
-<h2>Does actaully work</h2>
+<h2>Welcome To Social Funk</h2>
 
-<% if logged_in? %>
-	<div class="row">
-		<aside class="container-fluid col-md-4">
-			<section class="user_info">
-				<%= render 'shared/user_info' %>
-			</section>
-			<section class="micropost_form">
-				<%= render 'shared/micropost_form' %>
-			</section>
-		</aside>
-		<div class="col-md-8">
-			<h3>Posts</h3>
-			<%= render 'shared/feed' %>
-		</div>
-	</div>
-<% end %>
+<h4>Just Click On The Link To <%= link_to "Sign Up", "/sign_up" %></h4>
+
+
