--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,5 +1,5 @@
 <% if !params[:search].blank? %>
 	<% @user.each do |user| %>
-		<%= user.username %>
+		<%= link_to user.username, user %>
 	<% end %>
 <% end %>
