--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,10 +19,16 @@
 		</div>
 	</aside>
 	<% if logged_in? %>
-			<div class="col-md-8 panel-defualt">
+			<div class="col-md-8 panel-default">
 				<div class="panel-body">
 					<%= render 'shared/micropost_form' %>
+				</div>
+				<% if @user.microposts.empty? %>
+					<h3>Why Not Start Posting?</h3>
+				<% else %>
+				<div class="panel-body">
 					<%= render 'shared/feed' %>
+				<% end %>
 				</div>
 			</div>
 		</div>
