--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,10 @@
 					<%= render 'shared/stats' %>
 				</section>
 				<section class="user_info">
-						<%= render 'shared/user_info' %>
+					<%= render 'shared/user_info' %>
+				</section>
+				<section>
+					<%= render 'follow_form' %>
 				</section>
 			</div>
 		</div>
@@ -34,4 +37,5 @@
 		</div>
 	<% end %>
 </div>
+
 
