Fixed up some post and designs

--- a/app/assets/stylesheets/microposts.scss
+++ b/app/assets/stylesheets/microposts.scss
@@ -12,3 +12,12 @@
 .post {
 	display:block;
 }
+
+.micropost {
+	list-style-type:none;
+	margin-top:1rem;
+}
+
+.new_micropost {
+	margin-bottom:3rem;
+}
