--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% if @feed_items.any? %>
 	<ol class="mircoposts list-group">
-		<li class="list-group-item"><%= render 'shared/micropost' %></li>
+		<li class="list-group-item"><%= render @feed_items %></li>
 	</ol>
 <% end %>
