--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -9,7 +9,7 @@
     <span class="timestamp">
       <p>Posted <%= time_ago_in_words(micropost.created_at) %> ago.</p>
       <% if current_user?(micropost.user) %>
-        <p><%= link_to @micropost, method: :delete, data: {contfirm: "Are you sure?"} do %>
+        <p><%= link_to micropost, method: :delete, data: {contfirm: "Are you sure?"} do %>
           <i class="glyphicon glyphicon-remove"></i>
 
           <% end %></p>
