--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 			<div class="panel-body">
 				<section class="user_info">
 					<h2>	
-						<%# gravatar_for @user %>
+						<%= gravatar_for @user %>
 						<%= @user.username %>
 					</h2>
 				</section>
