--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -4,7 +4,7 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<section class="user_info">
-					<%# gravatar_for @user %>
+					<%= gravatar_for @user %>
 					<h2><%= @user.username %></h2>
 					<span><%= link_to "View Profile", @user %></span>
 					<span><p><%= pluralize(@user.microposts.count, "Posts") %></p></span>
@@ -14,7 +14,7 @@
 					<% if @users.any? %>
 						<div class="user_avatars">
 							<% @users.each do |user| %>
-								<%# link_to gravatar_for(user, size: 30), user %>
+								<%= link_to gravatar_for(user, size: 30), user %>
 							<% end %>
 						</div>
 					<% end %>
