--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,36 @@
 <% provide(:title, @user.username) %>
 <div class="row">
-	<aside class="col-sm-4">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<section class="user_info">
-					<h2>	
-						<%= gravatar_for @user %>
-						<%= @user.username %>
-					</h2>
-				</section>
-				<section class="stats">
-					<%= render 'shared/stats' %>
-				</section>
-				<section class="user_info">
-					<%= render 'shared/user_info' %>
-				</section>
-				<section>
-					<%= render 'follow_form' %>
-				</section>
-			</div>
-		</div>
-	</aside>
-	<% if logged_in? %>
-			<div class="col-md-8">
-				<% if current_user %>
-					<%= render 'shared/micropost_form' if logged_in? %>
+  <aside class="col-md-4">
+	<div class="panel panel-default">
+		<div class="panel-body">  
+		    <section class="user_info">
+		      <h1>
+		        <%= gravatar_for @user %>
+		        <%= @user.username %>
+		      </h1>
+		    </section>
+		    <section class="stats">
+		      <%= render 'shared/stats' %>
+		      <%= render 'follow_form' if logged_in? %>
+		      <br />
+		      <% if @users.any? %>
+					<div class="user_avatars">
+						<% @users.each do |user| %>
+							<%= link_to gravatar_for(user, size: 30), user %>
+						<% end %>
+					</div>
 				<% end %>
-				<% if @user.microposts.empty? %>
-					<h3>Why Not Start Posting?</h3>
-				<% else %>
-						<%= render 'shared/feed' %>
-				<% end %>
-			</div>
+		    </section>
 		</div>
-	<% end %>
+	</div>
+  </aside>
+  <div class="col-md-8">
+  	<div>
+  		<div class="panel-body">
+  			<%= render 'shared/micropost_form' %>
+		    <%= render 'shared/feed' %>
+		</div>
+	</div>
+  </div>
 </div>
-
 
