--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -2,4 +2,5 @@
 	<ol class="mircoposts list-group">
 		<li class="list-group-item"><%= render @feed_items %></li>
 	</ol>
+	<%= will_paginate @feed_items %>
 <% end %>
