--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, "Home") %>
 <h2>Welcome To Social Funk</h2>
+<div class="home_links">
+	<h3>Just Click On The Link To <%= link_to "Sign Up", "/sign_up" %></h3>
 
-<h4>Just Click On The Link To <%= link_to "Sign Up", "/sign_up" %></h4>
+	<h4>If You've Already Signed Up, Click This To <%= link_to "Log In", 'login' %></h4>
+</div>
 
 
