--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.home_links {
+	h3 {
+		a {
+			text-decoration:none;
+		}
+	}
+	h4{
+		a {
+			text-decoration:none;
+		}
+
+	}
+}
