--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Home") %>
-<h2>Welcome To Social Funk</h2>
+<h2>Welcom To Social Funk</h2>
 <div class="home_links">
 	<h3>Just Click On The Link To <%= link_to "Sign Up", "/sign_up" %></h3>
 
