added basics tooltips

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,17 @@ body {
 		}
 	}
 }
+
+.show_button {
+	border:none;
+	outline:none;
+	button {
+		a {
+			&:hover {
+				background:blue;
+				border:none;
+				outline:none;
+			}
+		}
+	}
+}
