--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -7,15 +7,15 @@
       <%# image_tag micropost.picture.url if micropost.picture? %>
     </span>
     <span class="timestamp">
-      <p class="time">Posted <%= time_ago_in_words(micropost.created_at) %> ago.</p>
+      <p class="time">Posted <%= time_ago_in_words(micropost.created_at).gsub('about','') %> ago.</p>
       <% if current_user?(micropost.user) %>
         <span class="post_link">
           <p><%= link_to micropost, method: :delete, data: {contfirm: "Are you sure?"} do %>
                 <i class="glyphicon glyphicon-remove"></i>
           <% end %>
       <% end %>
-          <%= link_to @comment do %>
-              <i class="glyphicon glyphicon-pencil"></i></p>
+          <%= link_to micropost_path(micropost) do %>
+                <i class="glyphicon glyphicon-pencil"></i></p>
           <% end %>
         </span>
     </span>
