--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -10,7 +10,7 @@
       <p class="time">Posted <%= time_ago_in_words(micropost.created_at).gsub('about','') %> ago.</p>
       <% if current_user?(micropost.user) %>
         <span class="post_link">
-          <p><%= link_to micropost, method: :delete, data: {contfirm: "Are you sure?"} do %>
+          <p><%= link_to micropost, method: :delete, data: {confirm: "Are you sure?"} do %>
                 <i class="glyphicon glyphicon-remove"></i>
           <% end %>
       <% end %>
