--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, "Home") %>
-<h2>Welcom To Social Funk</h2>
-<div class="home_links">
-	<h3>Just Click On The Link To <%= link_to "Sign Up", "/sign_up" %></h3>
+<div class="container-fluid col-md-6 col-md-offset-3">
+	<h2>Welcom To Social Funk</h2>
+	<div class="home_links">
+		<h3>Just Click On The Link To <%= link_to "Sign Up", "/sign_up" %></h3>
 
-	<h4>If You've Already Signed Up, Click This To <%= link_to "Log In", 'login' %></h4>
+		<h4>If You've Already Signed Up, Click This To <%= link_to "Log In", 'login' %></h4>
+	</div>
 </div>
 
 
