--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,14 +31,12 @@
           <ul class="dropdown-menu">
             <% if logged_in? %>
               <li><%= link_to "Profile", user_path(current_user) %></li>
-              <li><%= link_to "User Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "Account Settings", edit_user_path(current_user) %></li>
               <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             <% else %>
               <li><%= link_to "Log In", login_path %></li>
               <li><%= link_to "Sign Up", sign_up_path %></li>
             <% end %>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
           </ul>
         </li>
       </ul>
