--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% if @feed_items.any? %>
-	<ol class="mircoposts list-group">
+	<ol class="list-group", id="microposts">
 		<li class="list-group-item"><%= render @feed_items %></li>
 	</ol>
 	<%= will_paginate @feed_items %>
