--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,7 +3,9 @@
     <%# link_to gravatar_for(micropost.user, size: 50), micropost.user %>
     <span class="user"><%= link_to micropost.user.username, micropost.user %></span>
     <span class="content">
-      <p><%= micropost.content %></p>
+      <p><%= link_to micropost_path(micropost) do %>
+          <%= micropost.content %>
+      <% end %></p>
       <%# image_tag micropost.picture.url if micropost.picture? %>
     </span>
     <span class="timestamp">
