--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for([@micropost, @micropost.comments.build], remote: true) do |f| %>
+	<%= render 'shared/errors', object: f.object %>
 	<%= f.text_area :content, class: "form-control", placeholder: "Post A Reply" %>
 
 	<%= f.submit "Post", class: "btn btn-default" %>
