--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
             </div>
           <% end %>
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Forum", forums_url %></li>
         <li class="dropdown">
         <% if logged_in? %>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=current_user.email %> <span class="caret"></span></a>
