--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -30,7 +30,7 @@
 
 <div class="row">
 	<div class="container-fluid col-md-8 col-md-offset-2">
-		<h2>latest</h2>
+		<h2>News</h2>
 		<%# @forum_latest.each do |game| %>
 			<%# link_to game.title, forum_path(game) %>
 		<%# end %>
@@ -39,8 +39,17 @@
 
 <div class="row">
 	<div class="container-fluid col-md-8 col-md-offset-2">
-		<h2>Entertainment</h2>
+		<h2>Movies</h2>
 		<%# @forum_entertainment.each do |game| %>
+			<%# link_to game.title, forum_path(game) %>
+		<%# end %>
+	</div>
+</div>
+
+<div class="row">
+	<div class="container-fluid col-md-8 col-md-offset-2">
+		<h2>News</h2>
+		<%# @forum_news.each do |game| %>
 			<%# link_to game.title, forum_path(game) %>
 		<%# end %>
 	</div>
