--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -22,35 +22,35 @@
 <div class="row">
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>Politics</h2>
-		<%# @forum_politic.each do |game| %>
-			<%# link_to game.title, forum_path(game) %>
-		<%# end %>
+		<% @forum_politics.each do |game| %>
+			<% link_to game.title, forum_path(game) %>
+		<% end %>
 	</div>
 </div>
 
 <div class="row">
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>News</h2>
-		<%# @forum_latest.each do |game| %>
-			<%# link_to game.title, forum_path(game) %>
-		<%# end %>
+		<% @forum_news.each do |game| %>
+			<% link_to game.title, forum_path(game) %>
+		<% end %>
 	</div>
 </div>
 
 <div class="row">
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>Movies</h2>
-		<%# @forum_entertainment.each do |game| %>
-			<%# link_to game.title, forum_path(game) %>
-		<%# end %>
+		<% @forum_movies.each do |game| %>
+			<% link_to game.title, forum_path(game) %>
+		<% end %>
 	</div>
 </div>
 
 <div class="row">
 	<div class="container-fluid col-md-8 col-md-offset-2">
-		<h2>News</h2>
-		<%# @forum_news.each do |game| %>
-			<%# link_to game.title, forum_path(game) %>
-		<%# end %>
+		<h2>General</h2>
+		<% @forum_general.each do |game| %>
+			<% link_to game.title, forum_path(game) %>
+		<% end %>
 	</div>
 </div>
