--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -23,7 +23,7 @@
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>Politics</h2>
 		<% @forum_politics.each do |game| %>
-			<% link_to game.title, forum_path(game) %>
+			<%= link_to game.title, forum_path(game) %>
 		<% end %>
 	</div>
 </div>
@@ -32,7 +32,7 @@
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>News</h2>
 		<% @forum_news.each do |game| %>
-			<% link_to game.title, forum_path(game) %>
+			<%= link_to game.title, forum_path(game) %>
 		<% end %>
 	</div>
 </div>
@@ -41,7 +41,7 @@
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>Movies</h2>
 		<% @forum_movies.each do |game| %>
-			<% link_to game.title, forum_path(game) %>
+			<%= link_to game.title, forum_path(game) %>
 		<% end %>
 	</div>
 </div>
@@ -50,7 +50,7 @@
 	<div class="container-fluid col-md-8 col-md-offset-2">
 		<h2>General</h2>
 		<% @forum_general.each do |game| %>
-			<% link_to game.title, forum_path(game) %>
+			<%= link_to game.title, forum_path(game) %>
 		<% end %>
 	</div>
 </div>
