--- a/app/assets/stylesheets/forums.scss
+++ b/app/assets/stylesheets/forums.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the forums controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.forum {
+	margin:0;
+	padding:0;
+	.links {
+		float:right;
+		a {
+			margin-right:3rem;
+		}
+	}
+} 
