--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,4 +1,8 @@
-<%= content.comment %>
+<p><%= content.comment %></p>
 <h4><%= content.user.try(:username) %></h4>
-<%= link_to "Edit", edit_content_path %>
-<%= link_to "Delete", content_path, method: :delete, data: {confirm: "Are you sure?"} %>
+<% if logged_in? %>
+	<% if @topic.user.try(:id) == current_user.id %>
+		<%= link_to "Edit", edit_content_path %>
+		<%= link_to "Delete", content_path, method: :delete, data: {confirm: "Are you sure?"} %>
+	<% end %>
+<% end %>				
